--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.5)
-project(cluster_inference)
+project(merger)
 
 # Default to C99
 if(NOT CMAKE_C_STANDARD)
@@ -24,43 +24,37 @@ find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(std_msgs REQUIRED)
 find_package(sensor_msgs REQUIRED)
-find_package(image_transport REQUIRED)
-find_package(cv_bridge REQUIRED)
 
 include_directories(include)
 
 # Build
-add_executable(cluster_inference_node src/exec/cluster_inference_exec.cpp)
-ament_target_dependencies(cluster_inference_node
+add_executable(merger_node src/exec/merger_exec.cpp)
+ament_target_dependencies(merger_node
   rclcpp
   std_msgs
   sensor_msgs
-  image_transport
-  cv_bridge
 )
 
-add_library(cluster_inference_library SHARED src/cluster_inference.cpp)
-ament_target_dependencies(cluster_inference_library
+add_library(merger_library SHARED src/merger.cpp)
+ament_target_dependencies(merger_library
   rclcpp
   std_msgs
   sensor_msgs
-  image_transport
-  cv_bridge
 )
 
-target_link_libraries(cluster_inference_node
-  cluster_inference_library
+target_link_libraries(merger_node
+  merger_library
 )
 
 install(TARGETS
-  cluster_inference_library
+  merger_library
   ARCHIVE DESTINATION lib
   LIBRARY DESTINATION lib
   RUNTIME DESTINATION bin
 )
 
 install(TARGETS
-  cluster_inference_node
+  merger_node
   DESTINATION lib/${PROJECT_NAME}
 )
 
