fin without test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.5)
-project(merger)
+project(monitor)
 
 # Default to C99
 if(NOT CMAKE_C_STANDARD)
@@ -24,64 +24,36 @@ find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(std_msgs REQUIRED)
 find_package(sensor_msgs REQUIRED)
-find_package(rtx_msg_interface REQUIRED)
 find_package(cv_bridge REQUIRED)
 find_package(Threads REQUIRED)
 
 include_directories(include)
 
 # Build
-add_executable(merger_node src/exec/merger_exec.cpp)
-ament_target_dependencies(merger_node
-  rclcpp
-  std_msgs
-  sensor_msgs
-  rtx_msg_interface
-  cv_bridge
-  Threads
-)
-
 add_executable(demo_node src/exec/demo_exec.cpp)
 ament_target_dependencies(demo_node
   rclcpp
   std_msgs
   sensor_msgs
-  rtx_msg_interface
   cv_bridge
   Threads
 )
 
-add_library(merger_library SHARED src/merger.cpp include/pcan/ObjectDetectionsReceiver.cpp)
-ament_target_dependencies(merger_library
-  rclcpp
-  std_msgs
-  sensor_msgs
-  rtx_msg_interface
-  cv_bridge
-  Threads
-)
-
-add_library(demo_library SHARED src/demo.cpp)
+add_library(demo_library SHARED src/demo.cpp include/can/canreceiver.cpp)
 ament_target_dependencies(demo_library
   rclcpp
   std_msgs
   sensor_msgs
-  rtx_msg_interface
   cv_bridge
   Threads
 )
 
-target_link_libraries(merger_node
-  merger_library
+target_link_libraries(demo_node
+  demo_library
   pcanbasic
 )
 
-target_link_libraries(demo_node
-  demo_library
-)
-
 install(TARGETS
-  merger_library
   demo_library
   ARCHIVE DESTINATION lib
   LIBRARY DESTINATION lib
@@ -89,7 +61,6 @@ install(TARGETS
 )
 
 install(TARGETS
-  merger_node
   demo_node
   DESTINATION lib/${PROJECT_NAME}
 )
