--- a/package.xml
+++ b/package.xml
@@ -12,6 +12,7 @@
   <depend>rclcpp</depend>
   <depend>std_msgs</depend>
   <depend>sensor_msgs</depend>
+  <depenc>vision_msgs</depend>
   <depend>image_transport</depend>
   <depend>cv_bridge</depend>
 
