--- a/package.xml
+++ b/package.xml
@@ -15,6 +15,7 @@
   <depend>vision_msgs</depend>
   <depend>image_transport</depend>
   <depend>cv_bridge</depend>
+  <depend>posenet_msgs</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
